не работает поиск

--- a/AISLTP/AISLTP.csproj
+++ b/AISLTP/AISLTP.csproj
@@ -193,7 +193,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SotrController.cs" />
-    <Compile Include="Entities\SotrMaster.cs" />
+    <Compile Include="Entities\Sotr.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
